fix nav on mobile

--- a/datadraft/css/main.css
+++ b/datadraft/css/main.css
@@ -95,6 +95,9 @@ label {
     width: calc(100% - 240px);
     vertical-align: top;
   }
+  #website-nav .list-item {
+    padding: 12px 0px;
+  }
 }
 
 @media only screen and (max-width: 700px) {
